k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: symfony
spec:
  type: NodePort
  ports:
    - port: 8000
      name: http
      protocol: TCP
      targetPort: 8000
    - port: 8443
      name: https
      protocol: TCP
      targetPort: 443
  selector:
    service: symfony
